[gd_scene load_steps=7 format=2]

[ext_resource path="res://players/Yetzira/YetziraUI.gd" type="Script" id=1]
[ext_resource path="res://jsl-ancient/JANCIENT.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 20
use_mipmaps = false
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="YetziraUI" type="Control"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Stage1_Skills" type="Control" parent="." index="0"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ItemList" type="ItemList" parent="Stage1_Skills" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Stage1_Skills/ItemList" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="Atom" type="Button" parent="Stage1_Skills/ItemList/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Atom"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="Molecule" type="Button" parent="Stage1_Skills/ItemList/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 77.0
margin_right = 150.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Molecule"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Compound" type="Button" parent="Stage1_Skills/ItemList/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 154.0
margin_right = 150.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Compound"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Stage2_Skills" type="Control" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ItemList" type="ItemList" parent="Stage2_Skills" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Stage2_Skills/ItemList" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="Cell" type="Button" parent="Stage2_Skills/ItemList/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Cell"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="Tissue" type="Button" parent="Stage2_Skills/ItemList/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 77.0
margin_right = 150.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Tissue"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Organ" type="Button" parent="Stage2_Skills/ItemList/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 154.0
margin_right = 150.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Organ"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Stage3_Skills" type="Control" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ItemList" type="ItemList" parent="Stage3_Skills" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Stage3_Skills/ItemList" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="Person" type="Button" parent="Stage3_Skills/ItemList/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Person"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="Crowd" type="Button" parent="Stage3_Skills/ItemList/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 77.0
margin_right = 150.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Crowd"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Building" type="Button" parent="Stage3_Skills/ItemList/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 154.0
margin_right = 150.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Building"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Stage4_Skills" type="Control" parent="." index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ItemList" type="ItemList" parent="Stage4_Skills" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Stage4_Skills/ItemList" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="Village" type="Button" parent="Stage4_Skills/ItemList/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Village"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="City" type="Button" parent="Stage4_Skills/ItemList/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 77.0
margin_right = 150.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create City"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Country" type="Button" parent="Stage4_Skills/ItemList/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 154.0
margin_right = 150.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Country"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Stage5_Skills" type="Control" parent="." index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ItemList" type="ItemList" parent="Stage5_Skills" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Stage5_Skills/ItemList" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="Planet" type="Button" parent="Stage5_Skills/ItemList/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Planet"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="System" type="Button" parent="Stage5_Skills/ItemList/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 77.0
margin_right = 150.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create System"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Galaxy" type="Button" parent="Stage5_Skills/ItemList/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 154.0
margin_right = 150.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Galaxy"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="No_CP" type="Label" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 220.0
margin_right = 217.0
margin_bottom = 241.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "No Creation Points Remaining"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="no_cp_timer" type="Timer" parent="No_CP" index="0"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="pressed" from="Stage1_Skills/ItemList/VBoxContainer/Atom" to="." method="_on_Atom_pressed"]

[connection signal="pressed" from="Stage1_Skills/ItemList/VBoxContainer/Molecule" to="." method="_on_Molecule_pressed"]

[connection signal="pressed" from="Stage1_Skills/ItemList/VBoxContainer/Compound" to="." method="_on_Compound_pressed"]

[connection signal="pressed" from="Stage2_Skills/ItemList/VBoxContainer/Cell" to="." method="_on_Cell_pressed"]

[connection signal="pressed" from="Stage2_Skills/ItemList/VBoxContainer/Tissue" to="." method="_on_Tissue_pressed"]

[connection signal="pressed" from="Stage2_Skills/ItemList/VBoxContainer/Organ" to="." method="_on_Organ_pressed"]

[connection signal="pressed" from="Stage3_Skills/ItemList/VBoxContainer/Person" to="." method="_on_Person_pressed"]

[connection signal="pressed" from="Stage3_Skills/ItemList/VBoxContainer/Crowd" to="." method="_on_Crowd_pressed"]

[connection signal="pressed" from="Stage3_Skills/ItemList/VBoxContainer/Building" to="." method="_on_Building_pressed"]

[connection signal="pressed" from="Stage4_Skills/ItemList/VBoxContainer/Village" to="." method="_on_Village_pressed"]

[connection signal="pressed" from="Stage4_Skills/ItemList/VBoxContainer/City" to="." method="_on_City_pressed"]

[connection signal="pressed" from="Stage4_Skills/ItemList/VBoxContainer/Country" to="." method="_on_Country_pressed"]

[connection signal="pressed" from="Stage5_Skills/ItemList/VBoxContainer/Planet" to="." method="_on_Planet_pressed"]

[connection signal="pressed" from="Stage5_Skills/ItemList/VBoxContainer/System" to="." method="_on_System_pressed"]

[connection signal="pressed" from="Stage5_Skills/ItemList/VBoxContainer/Galaxy" to="." method="_on_Galaxy_pressed"]

[connection signal="timeout" from="No_CP/no_cp_timer" to="." method="_on_no_cp_timer_timeout"]


